--- a/.github/pr-labeler.yml
+++ b/.github/pr-labeler.yml
@@ -2,4 +2,5 @@ feature: ['feature/*', 'feat/*']
 fix: fix/*
 chore: chore/*
 patch: patch/*
+work-in-progress: wip/*
 fixed-branch: fixed-branch-name
